--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <div class="card">
       <div class="card-body">
-        <img src="../images/image-qr-code.png" class="card-img-top" alt="..." />
+        <img src="./images/image-qr-code.png" class="card-img-top" alt="..." />
         <h5 class="card-title">
           Improve your front-end skills by building projects
         </h5>
